Fix: Fixing Title and logo overlapping

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -566,7 +566,7 @@
 		}
 
 		.image {
-			position: absolute;
+			// position: absolute;
 			left: 0;
 			top: 0;
 		}
@@ -775,6 +775,9 @@
 					}
 				}
 			}
+            #logo{
+                position: relative;
+            }
 
 		/* Header */
 			#nav {
